--- a/public/result.html
+++ b/public/result.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Result</h1>
+    <script>
+        // alert(window.location.href);
+
+        fetch('http://localhost/scraper?a935714f-d844-4d8d-b15d-3cde3cc87538')
+    </script>
 </body>
 </html>
