--- a/public/result.html
+++ b/public/result.html
@@ -7,7 +7,7 @@
         <title>Attendance Scheduler</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     </head>
-    <body>
+    <body class="grey lighten-4">
 
         <div class="container" id="app">
             
